--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <h1>Odin Recipe</h1>
+        <img src="./chef_image.jpeg" alt="chef image">
+        <h2>Recipes</h2>
 
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/pizza.html"> Pizza </a></li>
+            <li><a href="./recipes/burger.html"> Burger</a></li>
+        </ul>
+
+        
     </body>
 </html>
